# PackagesComparator

./: CMakeLists.txt  README.md
lib/comparator/: Comparator.cc  Comparator.h
lib/reader/: PackageReader.cc  PackageReader.h
